--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "csv-parse": "5.3.8",
     "lodash": "4.17.21",
     "lowdb": "6.0.1",
-    "luxon": "3.3.0"
+    "luxon": "3.3.0",
+    "telegraf": "4.12.2"
   },
   "volta": {
     "node": "19.9.0",
