--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "csv-parse": "5.3.8",
+    "dotenv": "16.0.3",
     "lodash": "4.17.21",
     "lowdb": "6.0.1",
     "luxon": "3.3.0",
